# bazaar

src/: bazaar.gresource.xml  bz-addons-dialog.blp  bz-all-apps-page.blp  bz-application.c  bz-apps-page.blp  bz-entry-group.c  bz-entry-selection-row.blp  bz-favorites-tile.blp  bz-flatpak-instance.c  bz-full-view.blp  bz-internal-config.txt  bz-main-config.txt  bz-search-bias.txt  bz-search-engine.c  bz-search-engine.h  bz-state-info.txt  bz-transaction-tile.blp  bz-user-data-page.blp  internal-config-schema.xml  internal-config.yaml  main-config-schema.xml  meson.build
